--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "cache-ro"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 description = "A high-performance, thread-safe persistent cache with TTL support"
 license = "MIT OR Apache-2.0"
-authors = ["Kak Smko <ba.smko@example.com>"]
+authors = ["Kak Smko <ba.smko@gmail.com>"]
 repository = "https://github.com/kak-smko/cache-ro"
 documentation = "https://docs.rs/cache-ro"
 readme = "README.md"
@@ -20,3 +20,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 bincode = { version = "2.0.1",features = ["serde"] }
 sha2 = "0.10.9"
 dashmap = "6.1.0"
+lazy_static = "1.5.0"
